src/objects/FeatureProduct__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>FeatureProducts</relationshipLabel>
        <relationshipName>FeatureProducts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PricePerMonth__c</fullName>
        <label>PricePerMonth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PREMIUM_ACCOUNT</fullName>
                </value>
                <value>
                    <fullName>NORMAL_ACCOUNT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FeatureProduct</label>
    <nameField>
        <label>FeatureProduct Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FeatureProducts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>